# The-Wall-take-home

./: .actrc  .benchmark.env  .env.example  .gitignore  .pre-commit-config.yaml  BENCHMARK_README.md  Makefile  README.md  benchmark_report_20250709_221822.json  benchmark_report_20250709_221822.md  benchmark_tool.py  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  run_benchmark.sh  test_task_final.sh  test_urls.py
.github/workflows/: ci.yml
docs/: api-gateway.md  api-reference.md  database-connections.md  index.md  simulator.md
infrastructure/docker/: Dockerfile.api  Dockerfile.simulator
infrastructure/monitoring/prometheus/: prometheus.yml
infrastructure/perf/: comprehensive_benchmark.js  create_profiles.js  mixed_workload.js  simulation_e2e.js
scripts/: check_db_connections.sh
services/materializer/: __init__.py  kafka_consumer.py
services/simulator/: __init__.py  cli.py  config.py  kafka_consumer.py  kafka_producer.py  main.py  mock_kafka.py
shared/: __init__.py
shared/wall_common/: __init__.py  calcs.py  events.py  task_calcs.py
shared/wall_common/avro/: profile_created.avsc  profile_updated.avsc  simulation_progress.avsc
tests/: conftest.py  test_api_gateway.py  test_calcs.py  test_cli.py  test_events.py  test_kafka_consumer.py  test_kafka_producer.py  test_main_module.py  test_materializer.py  test_simulator.py
thewall/: .env.example  manage.py
thewall/apps/common/: __init__.py  apps.py  db_utils.py  models.py  utils.py
thewall/apps/common/management/commands/: db_connections.py  monitor_connections.py  run_materializer.py
thewall/apps/health/: urls.py  views.py
thewall/apps/profiles/: __init__.py  apps.py  kafka_publisher.py  models.py  serializers.py  task_views.py  urls.py  views.py
thewall/apps/profiles/migrations/: 0001_initial.py  0002_alter_wallprofile_id.py  0003_taskwallprofile_wallsection.py  0004_auto_20250709_1622.py
thewall/thewall/: __init__.py  asgi.py  urls.py  wsgi.py
thewall/thewall/settings/: __init__.py  base.py  local.py  production.py  test.py
